[workspace]
members = [
    "crates/oin-core",
    "crates/oin-node",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/VinavilDev/OpenImageNetwork"
description = "Open Image Network — Decentralized, private image hosting"
authors = ["VinavilDev"]
homepage = "https://github.com/VinavilDev/OpenImageNetwork"

[workspace.dependencies]
# Crypto
aes-gcm = "0.10.3"
hkdf = "0.12.4"
sha2 = "0.10.8"
rand = "0.8.5"

# Erasure coding
reed-solomon-erasure = "6.0.0"

# Serialization
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
bincode = "1.3.3"

# Encoding
base64 = "0.21.7"
bs58 = "0.5.1"

# Async
tokio = { version = "1.38.0", features = ["full"] }

# HTTP
axum = { version = "=0.7.4", features = ["multipart"] }

# Error handling
thiserror = "1.0.63"
anyhow = "1.0.86"

# Logging
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

# Time
chrono = { version = "0.4.38", features = ["serde"] }

# CRC
crc32fast = "1.4.2"

# HTTP client
ureq = "2.9.7"

# Pinned to avoid edition2024 issues
getrandom = "=0.2.15"

# System
libc = "0.2"

[profile.release]
strip = true
lto = "thin"
opt-level = "s"
panic = "abort"
codegen-units = 1
